--- a/you-go-healthplan/src/styling/home.css
+++ b/you-go-healthplan/src/styling/home.css
@@ -92,65 +92,11 @@ body {
 }
 #InfoContainer {
   width: 100%;
-  height: 600px;
+  height: 400px;
 }
 
-#firstcircle {
-  background-color: black;
-  width: 100px;
-  height: 100px;
-  border-radius: 50%;
+#firstBox {
   position: relative;
-  left: 580px;
-  top: 70px;
-}
-#firsttext {
-  text-align: center;
-  position: relative;
-  top: 70px;
-}
-#secondcircle {
-  background-color: black;
-  width: 100px;
-  height: 100px;
-  border-radius: 50%;
-  position: relative;
-  left: 900px;
   top: 60px;
-}
-#secondText {
   text-align: center;
-  position: relative;
-  left: 317px;
-  top: 60px;
-}
-
-#thirdcircle {
-  background-color: black;
-  width: 100px;
-  height: 100px;
-  border-radius: 50%;
-  position: relative;
-  left: 580px;
-  top: 100px;
-}
-#thirdText {
-  text-align: center;
-  position: relative;
-  top: 100px;
-}
-
-#fourthcircle {
-  background-color: black;
-  width: 100px;
-  height: 100px;
-  border-radius: 50%;
-  position: relative;
-  left: 250px;
-  top: -202px;
-}
-#fourthText {
-  position: relative;
-  top: -200px;
-  left: 220px;
 }
