--- a/you-go-healthplan/src/styling/home.css
+++ b/you-go-healthplan/src/styling/home.css
@@ -124,11 +124,17 @@ body {
 
 #InfoContainer {
   width: 100%;
-  height: 400px;
+  height: 300px;
+}
+
+#firstBoxRubrik {
+  font-family: titleFont;
+  font-size: 40px;
+  text-align: center;
 }
 
 #firstBox {
   position: relative;
-  top: 60px;
+  top: 10px;
   text-align: center;
 }
