--- a/you-go-healthplan/src/styling/pricing.css
+++ b/you-go-healthplan/src/styling/pricing.css
@@ -24,23 +24,23 @@ body {
   background-image: url(https://images.unsplash.com/photo-1538356596070-887d2c0b0d63?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1052&q=80);
   background-repeat: no-repeat;
   background-size: 100%;
-  height: 50vw;
+  height: 50.5vw;
   position: relative;
 }
 
-#header-title {
+#pricing-header-title {
   position: relative;
   font-family: titleFont;
-  top: 5vw;
-  color: #e78c7c;
+  top: 10vw;
+  color: #97bb90;
   font-size: 80px;
 }
 
-#header-p {
+#pricing-header-p {
   position: relative;
   font-family: lightFont;
-  top: 9vw;
-  color: #e78c7c;
+  top: 12vw;
+  color: #97bb90;
   font-size: 20px;
 }
 
@@ -53,16 +53,16 @@ body {
 }
 
 .emp-button {
-  border: solid 3px #e78c7c;
+  border: solid 3px #97bb90;
   border-radius: 3px;
-  color: #e78c7c;
+  color: #97bb90;
   height: 50px;
   margin-right: 40px;
   width: 130px;
 }
 
 .emp-button:hover {
-  background-color: #e78c7c;
+  background-color: #97bb90;
   color: white;
 }
 
@@ -82,28 +82,28 @@ body {
 }
 
 #nav {
-  color: #e78c7c;
+  color: #97bb90;
   border: solid 2px;
   padding: 10px;
   width: 10%;
 }
 
 #nav:hover {
-  color: #ffbbae;
+  color: #619756;
 }
 
 #bottom-items {
   align-items: center;
   text-align: center;
   font-family: lightFont;
-  background-color: #e78c7c;
+  background-color: #97bb90;
   width: 100%;
   display: inline-block;
 }
 
 #temp-footer {
-  background-color: #e78c7c;
-  color: #ffbbae;
+  background-color: #97bb90;
+  color: white;
   height: 150px;
   text-align: center;
   font-size: 100px;
