Contact continued, fotter created

--- a/you-go-healthplan/src/styling/contact.css
+++ b/you-go-healthplan/src/styling/contact.css
@@ -1,14 +1,23 @@
+@font-face {
+  font-family: lightFont;
+  src: url(../fonts/Louis\ George\ Cafe\ Light.ttf);
+}
+
 body {
   overflow-y: auto;
   overflow-x: hidden;
   background-color: rgb(238, 238, 238);
 }
 
+#contact-page {
+  font-family: lightFont;
+}
+
 #contact-header {
   background-image: url(https://images.pexels.com/photos/821754/pexels-photo-821754.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260);
   background-repeat: no-repeat;
   background-size: 100%;
-  height: 50.5vw;
+  height: 100vh;
   position: relative;
   align-items: center;
   text-align: center;
@@ -30,3 +39,90 @@ body {
   color: #ffffff;
   font-size: 20px;
 }
+
+#mapAndContact {
+  background-color: white;
+  border-radius: 3px;
+  width: 70vw;
+  height: 23vw;
+  margin: 50px auto;
+  display: flex;
+}
+
+#adress-info {
+  margin: 0 initial;
+  padding: 0 0 0 30px;
+  font-size: 1.1vw;
+  color: #336245;
+}
+
+hr {
+  background-color: #336245;
+  height: 1px;
+  border: none;
+}
+
+#contact-form {
+  display: flex; /* mindre skärm: display: inline-block; */
+  padding-left: 18%;
+  width: 100%;
+  margin-bottom: 50px;
+}
+
+#form-text {
+  background-color: white;
+  width: 30%;
+  height: 21vw;
+  text-align: center;
+  padding: 0 20px 0 20px;
+  font-size: 1.1vw;
+  color: #336245;
+}
+
+#questionImg {
+  width: 8vw;
+  padding-left: 1vw;
+}
+
+#formDiv {
+  background-color: white;
+  width: 30%;
+  height: 20vw;
+  text-align: center;
+  padding: 0.5vw 20px 0.5vw 0;
+  font-size: 1.1vw;
+  color: #336245;
+}
+
+input {
+  border: solid 0.01vw rgb(236, 236, 236);
+  background-color: rgb(247, 247, 247);
+  width: 10vw;
+  height: 1vw;
+}
+
+#free {
+  height: 6vw;
+}
+
+#submitButton {
+  border: none;
+  border-radius: 3px;
+  color: #ffffff;
+  background-color: #97bb90;
+  height: 2vw;
+  width: 10vw;
+}
+
+#submitButton:hover {
+  background-color: #72a169;
+}
+
+/*
+background: linear-gradient(
+    to right,
+    #ffffff,
+    #ffffff 30%,
+    rgb(238, 238, 238) 30%
+  );
+*/
