--- a/you-go-healthplan/src/styling/pricing.css
+++ b/you-go-healthplan/src/styling/pricing.css
@@ -24,7 +24,7 @@ body {
   background-image: url(https://images.unsplash.com/photo-1538356596070-887d2c0b0d63?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1052&q=80);
   background-repeat: no-repeat;
   background-size: 100%;
-  height: 50.5vw;
+  height: 100vh;
   position: relative;
 }
 
@@ -99,12 +99,4 @@ body {
   background-color: #97bb90;
   width: 100%;
   display: inline-block;
-}
-
-#temp-footer {
-  background-color: #97bb90;
-  color: white;
-  height: 150px;
-  text-align: center;
-  font-size: 100px;
 }
