--- a/you-go-healthplan/src/styling/footercomp.css
+++ b/you-go-healthplan/src/styling/footercomp.css
@@ -26,7 +26,7 @@
 
 #footer-media {
   width: 40vw;
-  text-align: center;
+  text-align: end;
 }
 
 .footerIcons {
@@ -34,4 +34,26 @@
   position: relative;
   top: 0.2vw;
   right: 0.4vw;
+}
+
+.socialMediaLogo {
+  position: relative;
+  top: -2.8vw;
+  left: -5vw;
+  width: 2.5vw;
+  margin: 0.5vw;
+}
+
+.socialMediaLogo:hover {
+  width: 2.6vw;
+}
+
+#footerYougoLogo {
+  width: 13vw;
+}
+
+#follow {
+  position: relative;
+  left: -23vw;
+  top: -9.3vw;
 }
