--- a/you-go-healthplan/src/styling/home.css
+++ b/you-go-healthplan/src/styling/home.css
@@ -124,7 +124,7 @@ body {
 
 #InfoContainer {
   width: 100%;
-  height: 300px;
+  height: 610px;
 }
 
 #firstBoxRubrik {
@@ -134,7 +134,25 @@ body {
 }
 
 #firstBox {
-  position: relative;
-  top: 10px;
   text-align: center;
+}
+
+#partners {
+  background-color: #ffb26b;
+  width: 100%;
+  display: inline-block;
+  flex-direction: row;
+  padding-left: 40px;
+}
+
+#textSamarbetspartners {
+  font-size: 40px;
+  text-align: center;
+  text-transform: uppercase;
+  font-family: titleFont;
+}
+
+.picinfo {
+  width: 200px;
+  margin: 40px;
 }
