--- a/you-go-healthplan/src/styling/about.css
+++ b/you-go-healthplan/src/styling/about.css
@@ -7,3 +7,57 @@
   font-family: titleFont;
   src: url(../fonts/Louis\ George\ Cafe.ttf);
 }
+
+#headerPicAbout {
+  background-image: url(https://images.unsplash.com/photo-1518481612222-68bbe828ecd1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1950&q=80);
+  background-repeat: no-repeat;
+  background-size: 100%;
+  height: 100vh;
+  position: relative;
+  align-items: center;
+  text-align: center;
+}
+
+.rubrikAbout {
+  position: relative;
+  text-align: center;
+  text-transform: uppercase;
+  font-family: titleFont;
+}
+
+.textAbout {
+  text-align: center;
+  font-family: lightFont;
+}
+
+#globalGoals {
+  margin-top: 70px;
+  text-align: center;
+  padding: 10px;
+}
+
+#dreamBig {
+  margin-top: 70px;
+  text-align: center;
+  padding: 10px;
+}
+
+#DreamBigLogga {
+  width: 70%;
+}
+
+#philosophydiv {
+  background-color: #ffb26b;
+  width: 50%;
+  display: inline-block;
+  flex-direction: row;
+}
+
+#meetYouGodiv {
+  background-color: #ff6b6b;
+  width: 50%;
+  display: inline-block;
+  flex-direction: row;
+  position: relative;
+  left: 50%;
+}
