--- a/you-go-healthplan/src/styling/pricing.css
+++ b/you-go-healthplan/src/styling/pricing.css
@@ -20,28 +20,16 @@ body {
   font-family: lightFont;
 }
 
-#pricing-header {
-  background-image: url(https://images.unsplash.com/photo-1538356596070-887d2c0b0d63?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1052&q=80);
-  background-repeat: no-repeat;
-  background-size: 100%;
-  height: 100vh;
-  position: relative;
-}
-
-#pricing-header-title {
-  position: relative;
+#pricing-title {
   font-family: titleFont;
-  top: 9vw;
   color: #97bb90;
-  font-size: 6vw;
+  font-size: 4vw;
 }
 
-#pricing-header-p {
-  position: relative;
-  font-family: lightFont;
-  top: 8vw;
-  color: #97bb90;
-  font-size: 1.2vw;
+#pricing-hr {
+  width: 40vw;
+  background-color: #97bb90;
+  border: none;
 }
 
 #numberOfEmp {
