--- a/you-go-healthplan/src/styling/pricinginfocomp.css
+++ b/you-go-healthplan/src/styling/pricinginfocomp.css
@@ -1,6 +1,6 @@
 .infobox {
-  width: 260px;
-  height: 360px;
+  width: 14vw;
+  height: 20vw;
   padding: 20px;
   display: inline-table;
   background-color: #ffffff;
