--- a/you-go-healthplan/src/styling/pricingboxcomp.css
+++ b/you-go-healthplan/src/styling/pricingboxcomp.css
@@ -3,8 +3,8 @@
   display: inline-table;
   background-color: #ffffff;
   border-radius: 4px;
-  margin: 30px;
-  width: 250px;
+  margin: 2vw;
+  width: 280px;
 }
 
 .top-box {
@@ -26,8 +26,11 @@
   color: white;
   padding: 10px 25px 10px 25px;
   border-radius: 3px;
+  margin-bottom: -1vw;
 }
 
 #monthly {
-  font-size: 30px;
+  font-size: 2.3vw;
+  margin-top: 1vw;
+  margin-bottom: 2vw;
 }
