--- a/you-go-healthplan/src/styling/home.css
+++ b/you-go-healthplan/src/styling/home.css
@@ -35,7 +35,7 @@ body {
 }
 
 #imgOfSomething {
-  background-color: #ff6b6b;
+  background-color: #97bb90;
   width: 200px;
   height: 200px;
   border-radius: 50%;
@@ -51,7 +51,7 @@ body {
 }
 
 #imgOfSomething1 {
-  background-color: #ffb26b;
+  background-color: #97bb90;
   width: 200px;
   height: 200px;
   padding: 8px;
@@ -67,7 +67,7 @@ body {
 }
 
 #colorcontainer {
-  background-color: #ff6b6b;
+  background-color: #97bb90;
   width: 100%;
   height: 610px;
   display: flex;
@@ -114,7 +114,7 @@ body {
   height: 30px;
   border-radius: 5px;
   border: none;
-  background-color: #ff6b6b;
+  background-color: #97bb90;
   box-shadow: black 0 0 1px;
   position: relative;
   left: 100px;
@@ -138,7 +138,7 @@ body {
 }
 
 #partners {
-  background-color: #ffb26b;
+  background-color: #97bb90;
   width: 100%;
   display: inline-block;
   flex-direction: row;
