--- a/you-go-healthplan/src/styling/contact.css
+++ b/you-go-healthplan/src/styling/contact.css
@@ -14,30 +14,21 @@ body {
 }
 
 #contact-header {
-  background-image: url(https://images.pexels.com/photos/821754/pexels-photo-821754.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260);
-  background-repeat: no-repeat;
-  background-size: 100%;
-  height: 100vh;
-  position: relative;
   align-items: center;
   text-align: center;
   font-family: lightFont;
 }
 
 #contact-header-title {
-  position: relative;
   font-family: titleFont;
-  top: 10vw;
-  color: #ffffff;
-  font-size: 100px;
+  color: #336245;
+  font-size: 3vw;
 }
 
 #contact-header-p {
-  position: relative;
   font-family: lightFont;
-  top: 10.5vw;
-  color: #ffffff;
-  font-size: 20px;
+  color: #336245;
+  font-size: 1vw;
 }
 
 #mapAndContact {
