--- a/you-go-healthplan/src/styling/pricing.css
+++ b/you-go-healthplan/src/styling/pricing.css
@@ -22,13 +22,13 @@ body {
 
 #pricing-title {
   font-family: titleFont;
-  color: #97bb90;
+  color: #8ace32;
   font-size: 4vw;
 }
 
 #pricing-hr {
   width: 40vw;
-  background-color: #97bb90;
+  background-color: #8ace32;
   border: none;
 }
 
@@ -41,9 +41,9 @@ body {
 }
 
 .emp-button {
-  border: solid 3px #97bb90;
+  border: solid 3px #8ace32;
   border-radius: 3px;
-  color: #97bb90;
+  color: #8ace32;
   height: 50px;
   margin-right: 40px;
   width: 130px;
@@ -51,7 +51,7 @@ body {
 }
 
 .emp-button:hover {
-  background-color: #97bb90;
+  background-color: #8ace32;
   color: white;
 }
 
@@ -73,21 +73,21 @@ body {
 }
 
 #nav {
-  color: #97bb90;
+  color: #8ace32;
   border: solid 2px;
   padding: 10px;
   width: 10%;
 }
 
 #nav:hover {
-  color: #619756;
+  color: #7dbd2b;
 }
 
 #bottom-items {
   align-items: center;
   text-align: center;
   font-family: lightFont;
-  background-color: #97bb90;
+  background: linear-gradient(to right, #b7f369, #8ace32 100%);
   width: 100%;
   display: inline-block;
   margin-bottom: 2vw;
