--- a/you-go-healthplan/src/styling/pricingboxcomp.css
+++ b/you-go-healthplan/src/styling/pricingboxcomp.css
@@ -8,7 +8,10 @@
 }
 
 .top-box {
-  background-color: #b9d3b4;
+  /*background: linear-gradient(to right, #dd76fc, #9639b3 100%);
+  background: linear-gradient(to right, #86fae1, #3bb89d 100%);*/
+  background: linear-gradient(to right, #b7f369, #8ace32 100%);
+
   color: white;
   padding-bottom: 5px;
 }
@@ -22,7 +25,10 @@
 #title {
   position: relative;
   top: -25px;
-  background-color: #97bb90;
+  /*background-color: #8e37a8;
+  background: linear-gradient(to right, #6adac1, #31aa90 100%);*/
+  background: linear-gradient(to right, #a9e45d, #80c02b 100%);
+
   color: white;
   padding: 10px 25px 10px 25px;
   border-radius: 3px;
