scrollToTop done, minor fixes

--- a/you-go-healthplan/src/styling/contact.css
+++ b/you-go-healthplan/src/styling/contact.css
@@ -31,7 +31,7 @@ body {
   font-size: 1vw;
 }
 
-#mapAndContact {
+#formAndContact {
   background-color: white;
   border-radius: 3px;
   width: 70vw;
@@ -58,16 +58,6 @@ hr {
   padding-left: 18%;
   width: 100%;
   margin-bottom: 50px;
-}
-
-#form-text {
-  background-color: white;
-  width: 30%;
-  height: 21vw;
-  text-align: center;
-  padding: 0 20px 0 20px;
-  font-size: 1.1vw;
-  color: #336245;
 }
 
 #questionImg {
