--- a/you-go-healthplan/src/styling/footercomp.css
+++ b/you-go-healthplan/src/styling/footercomp.css
@@ -13,16 +13,23 @@
   padding-top: 3vw;
 }
 
+/*-- Adress section --*/
+
 #footer-adress {
   text-align: initial;
   padding-left: 4vw;
   width: 30vw;
 }
 
+/*-- Contact section --*/
+
 #footer-contact {
+  padding-top: 2vw;
   text-align: initial;
   width: 20vw;
 }
+
+/*-- Social-media section --*/
 
 #footer-media {
   width: 40vw;
@@ -48,12 +55,14 @@
   width: 2.6vw;
 }
 
-#footerYougoLogo {
-  width: 13vw;
-}
-
 #follow {
   position: relative;
   left: -23vw;
   top: -9.3vw;
+}
+
+/*-- Logo section --*/
+
+#footerYougoLogo {
+  width: 13vw;
 }
