--- a/you-go-healthplan/src/styling/contact.css
+++ b/you-go-healthplan/src/styling/contact.css
@@ -139,6 +139,7 @@ body {
   text-decoration: none;
   text-transform: uppercase;
   transition: 0.3s;
+  outline: none;
 }
 .form-style-8 input[type="button"]:hover,
 .form-style-8 input[type="submit"]:hover {
