--- a/you-go-healthplan/src/styling/pricing.css
+++ b/you-go-healthplan/src/styling/pricing.css
@@ -87,7 +87,11 @@ body {
   align-items: center;
   text-align: center;
   font-family: lightFont;
-  background: linear-gradient(to right, #7bfa70, #48d13c 100%);
+  background: linear-gradient(to bottom right, #fde55e 20%, #fd635e 100%);
+  background: linear-gradient(to bottom right, #5febc1 20%, #5f9ceb 100%);
+  background: linear-gradient(to bottom right, #d657d6 20%, #4287d6 100%);
+  background: linear-gradient(to bottom right, #7bfa70, #48d13c 100%);
+
   width: 100%;
   display: inline-block;
   margin-bottom: 2vw;
