--- a/you-go-healthplan/src/styling/blogg.css
+++ b/you-go-healthplan/src/styling/blogg.css
@@ -59,7 +59,7 @@ body {
   display: flex;
   width: 80vw;
   margin: 2vw auto;
-  margin-top: 0;
+  margin-top: -4.2vw;
 }
 
 #post-image {
@@ -100,7 +100,9 @@ body {
   width: 7vw;
   transition: all 0.5s;
   cursor: pointer;
-  margin: 2vw;
+  margin: 1vw;
+  margin-top: 2vw;
+  outline: none;
 }
 
 .post-back-button span {
