--- a/you-go-healthplan/src/styling/pricingboxcomp.css
+++ b/you-go-healthplan/src/styling/pricingboxcomp.css
@@ -1,3 +1,5 @@
+/*-- Whole box -- */
+
 .box {
   color: rgb(0, 0, 0);
   display: inline-table;
@@ -6,6 +8,24 @@
   margin: 2vw;
   width: 280px;
 }
+
+/*-- Title row -- */
+
+#title {
+  position: relative;
+  top: -25px;
+  /*background-color: #8e37a8;
+  background: linear-gradient(to right, #6adac1, #31aa90 100%);*/
+  background: linear-gradient(to right, #a9e45d, #80c02b 100%);
+  background: linear-gradient(to right, #73ec68, #3fbe33 100%);
+
+  color: white;
+  padding: 10px 25px 10px 25px;
+  border-radius: 3px;
+  margin-bottom: -1vw;
+}
+
+/*-- Top row -- */
 
 .top-box {
   /*background: linear-gradient(to right, #dd76fc, #9639b3 100%);
@@ -17,28 +37,16 @@
   padding-bottom: 5px;
 }
 
-.bottom-box {
-  position: relative;
-  padding: 20px 10px 10px 10px;
-  top: -1px;
-}
-
-#title {
-  position: relative;
-  top: -25px;
-  /*background-color: #8e37a8;
-  background: linear-gradient(to right, #6adac1, #31aa90 100%);*/
-  background: linear-gradient(to right, #a9e45d, #80c02b 100%);
-  background: linear-gradient(to right, #68e45c, #36b62b 100%);
-
-  color: white;
-  padding: 10px 25px 10px 25px;
-  border-radius: 3px;
-  margin-bottom: -1vw;
-}
-
 #monthly {
   font-size: 2.3vw;
   margin-top: 1vw;
   margin-bottom: 2vw;
+}
+
+/*-- Bottmon row -- */
+
+.bottom-box {
+  position: relative;
+  padding: 20px 10px 10px 10px;
+  top: -1px;
 }
