--- a/you-go-healthplan/src/styling/pricingboxcomp.css
+++ b/you-go-healthplan/src/styling/pricingboxcomp.css
@@ -17,7 +17,7 @@
   /*background-color: #8e37a8;
   background: linear-gradient(to right, #6adac1, #31aa90 100%);*/
   background: linear-gradient(to right, #a9e45d, #80c02b 100%);
-  background: linear-gradient(to right, #73ec68, #3fbe33 100%);
+  background: linear-gradient(to right, #24ff72, #9a4eff);
 
   color: white;
   padding: 10px 25px 10px 25px;
@@ -29,9 +29,9 @@
 
 .top-box {
   /*background: linear-gradient(to right, #dd76fc, #9639b3 100%);
-  background: linear-gradient(to right, #86fae1, #3bb89d 100%);*/
-  background: linear-gradient(to right, #b7f369, #8ace32 100%);
-  background: linear-gradient(to right, #7bfa70, #48d13c 100%);
+  background: linear-gradient(to right, #86fae1, #3bb89d 100%);
+  background: linear-gradient(to right, #b7f369, #8ace32 100%);*/
+  background: linear-gradient(to right, #24ff72, #9a4eff);
 
   color: white;
   padding-bottom: 5px;
