--- a/you-go-healthplan/src/styling/pricing.css
+++ b/you-go-healthplan/src/styling/pricing.css
@@ -44,9 +44,9 @@ body {
 }
 
 .emp-button {
-  border: solid 2px #9a4eff;
+  border: solid 2px #6995c5;
   border-radius: 3px;
-  color: #9a4eff;
+  color: #6995c5;
   height: 50px;
   margin-right: 40px;
   width: 130px;
@@ -55,7 +55,7 @@ body {
 }
 
 .emp-button:hover {
-  background-color: #9a4eff;
+  background-color: #6995c5;
   color: white;
 }
 
@@ -73,7 +73,7 @@ body {
 }
 
 #nav {
-  color: #9a4eff;
+  color: #6995c5;
   border: solid 2px;
   padding: 10px;
   width: 10%;
@@ -81,7 +81,7 @@ body {
 }
 
 #nav:hover {
-  color: #813fd6;
+  color: #5178a1;
 }
 
 /*-- Service description --*/
@@ -90,10 +90,10 @@ body {
   align-items: center;
   text-align: center;
   font-family: lightFont;
-  background: linear-gradient(to bottom right, #fde55e 20%, #fd635e 100%);
+  /*background: linear-gradient(to bottom right, #fde55e 20%, #fd635e 100%);
   background: linear-gradient(to bottom right, #5febc1 20%, #5f9ceb 100%);
   background: linear-gradient(to bottom right, #d657d6 20%, #4287d6 100%);
-  background: linear-gradient(to bottom right, #7bfa70, #48d13c 100%);
+  background: linear-gradient(to bottom right, #7bfa70, #48d13c 100%);*/
   background: linear-gradient(-45deg, #24ff72, #9a4eff);
 
   width: 100%;
