--- a/you-go-healthplan/src/styling/pricingboxcomp.css
+++ b/you-go-healthplan/src/styling/pricingboxcomp.css
@@ -7,6 +7,9 @@
   border-radius: 4px;
   margin: 2vw;
   width: 280px;
+  box-shadow: 0px 0px 15px rgba(66, 66, 66, 0.22);
+  -moz-box-shadow: 0px 0px 15px rgba(66, 66, 66, 0.22);
+  -webkit-box-shadow: 0px 0px 15px rgba(66, 66, 66, 0.22);
 }
 
 /*-- Title row -- */
