--- a/you-go-healthplan/src/styling/about.css
+++ b/you-go-healthplan/src/styling/about.css
@@ -10,9 +10,12 @@
 }
 
 #about-header-title {
-  font-family: lightFont;
+  font-family: titleFont;
   font-size: 3vw;
   margin-bottom: 3vw;
+  background: linear-gradient(to right, #f403d1 20%, #64b5f6 60%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 
 .rubrikAbout {
